--- a/public/player.html
+++ b/public/player.html
@@ -2,240 +2,80 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Cinema Party · Синхронный просмотр</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cinema Party</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            background: #0a0c0e;
-            color: white;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        #video-container {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            margin: 0;
             background: #000;
-            position: relative;
-        }
-        video {
-            width: 100%;
-            height: 100%;
-            max-height: 100vh;
-            outline: none;
-        }
-        #controls {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(20, 22, 26, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 15px 25px;
-            border-radius: 50px;
+            color: white;
+            font-family: Arial, sans-serif;
             display: flex;
-            gap: 15px;
-            align-items: center;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-            border: 1px solid rgba(255,255,255,0.1);
-            z-index: 100;
-            flex-wrap: wrap;
             justify-content: center;
-        }
-        .btn {
-            background: #ff4d4d;
-            color: white;
-            border: none;
-            padding: 10px 24px;
-            border-radius: 40px;
-            font-weight: 600;
-            font-size: 15px;
-            cursor: pointer;
-            transition: all 0.2s;
-            display: inline-flex;
             align-items: center;
-            gap: 8px;
+            height: 100vh;
+            flex-direction: column;
         }
-        .btn:hover { background: #ff3333; transform: scale(1.02); }
-        #url-input {
-            width: 400px;
-            padding: 12px 20px;
-            border-radius: 40px;
+        #player {
+            width: 100%;
+            max-width: 1000px;
+            height: 70vh;
             border: none;
-            background: #1a1c1e;
-            color: white;
-            font-size: 15px;
-            outline: none;
-            border: 1px solid #2a2c2e;
+            border-radius: 12px;
+            box-shadow: 0 0 20px rgba(255,75,75,0.3);
         }
-        #url-input:focus { border-color: #ff4d4d; }
-        #room-info {
+        #info {
             position: fixed;
             top: 20px;
             left: 20px;
-            background: rgba(20, 22, 26, 0.9);
-            padding: 12px 20px;
-            border-radius: 40px;
-            font-size: 14px;
-            border: 1px solid rgba(255,255,255,0.1);
-            backdrop-filter: blur(5px);
+            background: rgba(0,0,0,0.8);
+            padding: 10px 20px;
+            border-radius: 30px;
+            border: 1px solid #ff4d4d;
+            color: #ff4d4d;
         }
         #status {
             position: fixed;
             top: 20px;
             right: 20px;
-            background: rgba(20, 22, 26, 0.9);
-            padding: 12px 20px;
-            border-radius: 40px;
-            font-size: 14px;
-            border: 1px solid rgba(255,255,255,0.1);
-            backdrop-filter: blur(5px);
-        }
-        @media (max-width: 768px) {
-            #controls { flex-direction: column; width: 90%; }
-            #url-input { width: 100%; }
+            background: rgba(0,0,0,0.8);
+            padding: 10px 20px;
+            border-radius: 30px;
+            border: 1px solid #00ff88;
+            color: #00ff88;
         }
     </style>
 </head>
 <body>
-    <div id="room-info">🏠 Комната: <span id="room-id">загрузка...</span></div>
+    <div id="info">🏠 Комната: <span id="room-id">загрузка...</span></div>
     <div id="status">🟡 Подключение...</div>
 
-    <div id="video-container">
-        <video id="player" controls></video>
-    </div>
-
-    <div id="controls">
-        <input type="text" id="url-input" placeholder="Вставь ссылку с YouTube, LordFilm, VK, mp4...">
-        <button class="btn" onclick="loadVideo()">📺 Загрузить</button>
-        <button class="btn" onclick="togglePlay()">⏯️ Пауза/Плей</button>
-    </div>
-
-    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <iframe id="player" src="" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
     <script>
-        // Получаем параметры из URL
         const urlParams = new URLSearchParams(window.location.search);
         const roomId = urlParams.get('room') || 'default';
-        const userId = urlParams.get('user') || 'guest_' + Math.random().toString(36).substr(2, 9);
+        const videoUrl = urlParams.get('url');
 
         document.getElementById('room-id').textContent = roomId;
+        document.getElementById('status').innerHTML = '🟢 Плеер готов';
 
-        // Подключение к WebRTC серверу
-        const socket = io({
-            query: { room: roomId, user: userId }
-        });
+        if (videoUrl) {
+            let embedUrl = videoUrl;
 
-        const player = document.getElementById('player');
-        let isHost = false;
-
-        socket.on('connect', () => {
-            document.getElementById('status').innerHTML = '🟢 Подключено к серверу';
-            socket.emit('join-room', { roomId, userId, username: 'User_' + userId.substr(0, 4) });
-        });
-
-        socket.on('room-state', (state) => {
-            if (state.hostId === socket.id) isHost = true;
-        });
-
-        socket.on('peer-joined', (data) => {
-            console.log('👥 Участник присоединился:', data);
-        });
-
-        socket.on('video-loaded', (data) => {
-            loadVideoUrl(data.url);
-            document.getElementById('status').innerHTML = '🎬 Видео загружено';
-        });
-
-        socket.on('video-sync', (data) => {
-            if (data.userId !== userId) {
-                if (data.action === 'play') player.play();
-                if (data.action === 'pause') player.pause();
-                if (data.action === 'seek' && Math.abs(player.currentTime - data.time) > 2) {
-                    player.currentTime = data.time;
-                }
+            // Конвертируем YouTube ссылки в embed формат
+            if (videoUrl.includes('youtube.com/watch')) {
+                const videoId = new URL(videoUrl).searchParams.get('v');
+                embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1&rel=0`;
+            } else if (videoUrl.includes('youtu.be/')) {
+                const videoId = videoUrl.split('youtu.be/')[1].split('?')[0];
+                embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1&rel=0`;
             }
-        });
 
-        // Синхронизация действий
-        player.addEventListener('play', () => {
-            if (isHost) {
-                socket.emit('video-action', {
-                    roomId,
-                    userId,
-                    action: 'play',
-                    time: player.currentTime
-                });
-            }
-        });
-
-        player.addEventListener('pause', () => {
-            if (isHost) {
-                socket.emit('video-action', {
-                    roomId,
-                    userId,
-                    action: 'pause',
-                    time: player.currentTime
-                });
-            }
-        });
-
-        player.addEventListener('seeked', () => {
-            if (isHost) {
-                socket.emit('video-action', {
-                    roomId,
-                    userId,
-                    action: 'seek',
-                    time: player.currentTime
-                });
-            }
-        });
-
-        // Загрузка видео
-        async function loadVideo() {
-            const url = document.getElementById('url-input').value;
-            if (!url) return;
-
-            document.getElementById('status').innerHTML = '⏳ Загрузка...';
-
-            loadVideoUrl(url);
-
-            socket.emit('video-load', {
-                roomId,
-                userId,
-                videoUrl: url
-            });
-
-            document.getElementById('status').innerHTML = '✅ Видео загружено';
+            const player = document.getElementById('player');
+            player.src = embedUrl;
+            document.getElementById('status').innerHTML = '🎬 Воспроизведение';
         }
-
-        function loadVideoUrl(url) {
-            if (url.includes('.m3u8')) {
-                if (Hls.isSupported()) {
-                    const hls = new Hls();
-                    hls.loadSource(url);
-                    hls.attachMedia(player);
-                    player.play();
-                }
-            } else {
-                player.src = url;
-                player.play();
-            }
-        }
-
-        function togglePlay() {
-            player.paused ? player.play() : player.pause();
-        }
-
-        // Обработка ошибок
-        player.onerror = function() {
-            document.getElementById('status').innerHTML = '❌ Ошибка видео';
-        };
     </script>
 </body>
 </html>
